--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -92,7 +92,7 @@ Still keeping for future ref (if needed).
     {% if node.edit_policy == "EDITABLE_MODERATED" and "Group" not in node.member_of_names_list %}
       <div class="row">
       {% if files_cur.count > 0  %}
-            <h4> {{files_cur.count}} Resource{{ files_cur.count|pluralize }} {% trans " awaiting for moderation: " %}</h4>
+            <h4> {{files_cur.count}} {% trans "Resource" %}{{ files_cur.count|pluralize }} {% trans " awaiting for moderation: " %}</h4>
             {% include "ndf/file_list_tab.html" with resource_type=files_cur detail_urlname="file_detail" filetype="all" res_type_name="" %}
       {% else %}
             <h4>{% trans "Currently, there are no Resources for moderation " %}</h4>
@@ -292,7 +292,7 @@ Still keeping for future ref (if needed).
                   {% if not node.collection_set %}
                   <figcaption style="position:relative;top:0;left:0" title="Click Here to View Image in Full Screen">
                       <a  target="_blank" href="{% url 'read_file' group_name_tag node.pk download_filename %}">
-                         View in Full Screen
+                         {% trans "View in Full Screen" %}
                          <i class="fi-projection-screen"> </i>
                       </a>
                     </figcaption>
@@ -305,7 +305,7 @@ Still keeping for future ref (if needed).
                     <img  src="{{MEDIA_URL}}{{node.if_file.original.relurl}}" style="min-height:200px;" />
                   <figcaption style="position:relative;top:0;left:0" title="Click Here to View Image in Full Screen">
                       <a  target="_blank" href="{% url 'read_file' group_name_tag node.pk download_filename %}">
-                         View in Full Screen
+                         {% trans "View in Full Screen" %}
                          <i class="fi-projection-screen"> </i>
                     </figcaption>
                       </a>
@@ -323,7 +323,7 @@ Still keeping for future ref (if needed).
                 {% if node.created_by == request.user.id or is_gstaff %}
                   <dl class="accordion" data-accordion>
                       <dd class="accordion-navigation" data-options="deep_linking:true">
-                            <a href="#panel1" style="background-color: #2980B9;color:#FFF;width:20%">Change Thumbnail</a>
+                            <a href="#panel1" style="background-color: #2980B9;color:#FFF;width:20%">{% trans "Change Thumbnail" %}</a>
                             <div id="panel1" class="content" style="height:210px">
                               {% get_relation_value node.pk 'has_thumbnail' as grel_dict %}
                               {% include 'ndf/video_thumbnail.html' with grel_dict=grel_dict video_id=node.pk group_id=group_id parent_node=node.pk %}
@@ -386,7 +386,7 @@ Still keeping for future ref (if needed).
                   </h4>
                   <div class="small-8 columns text-center"></div>
                   <h4 class="text-right small-4 columns redirection" onclick="Book.nextPage();">
-                    <small>Next <i class="fi-arrow-right"></i></small>
+                    <small>{% trans "Next" %} <i class="fi-arrow-right"></i></small>
                   </h4>
                 </div>
 
@@ -403,7 +403,7 @@ Still keeping for future ref (if needed).
                     {% trans 'Download' %}
                   </a>
                   <h4 class="text-right small-4 columns redirection" onclick="Book.nextPage();">
-                    <small>Next <i class="fi-arrow-right"></i></small>
+                    <small>{% trans "Next" %} <i class="fi-arrow-right"></i></small>
                   </h4>
 
                 </div>
