--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
@@ -446,7 +446,7 @@
 			</div>
 
 			<div class="small-12 large-4 columns">
-				<label><h5>Copyright</h5></label>
+				<label><h5>{% trans "Copyright" %}</h5></label>
 				<!-- <input id="copyright_id" name="Copyright" type="text" placeholder="Enter source name"/> -->
 				{% get_copyright as copyright %}
 				<select name="copyright"  required>
@@ -459,7 +459,7 @@
 	        			{% endif %}>
 					{% endfor %}
 				</select>
-				<small class="error">Please select resource Subject</small>
+				<small class="error">{% trans "Please select resource Subject" %}</small>
 
 			</div>
 
@@ -498,8 +498,8 @@
 		      </div>
 		      <div class="large-pull-4 large-6 medium-8 columns">
 		        <select id="release_resp_sel" name="release_resp_sel">
-		          <option value="True" {% if resp_val or not thread_node %} selected{% endif %}>Show Replies to All</option>
-		          <option value="False" {% if thread_node and not resp_val %} selected{% endif %}>Hide Replies from All</option>
+		          <option value="True" {% if resp_val or not thread_node %} selected{% endif %}>{% trans "Show Replies to All" %}</option>
+		          <option value="False" {% if thread_node and not resp_val %} selected{% endif %}>{% trans "Hide Replies from All" %}</option>
 		        </select>
 		      </div>
 		    </div>
