--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/rating.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/rating.html
@@ -11,24 +11,24 @@
             <div {% if user_access_priv == "allow" %}  data-node="{{node}}" data-avg-rating="{{ratings.avg}}" data-votes="{{ratings.tot}}" class="rating-bar" data-user-rating="{{ratings.user_rating}}" {% else %} class=" rating-bar show user_not_enrolled" {% endif %}>
                 <span>
                     <input type="radio" id="rating-5" name="rating" value="5" />
-                        <label for="rating-5">5</label>
+                        <label for="rating-5">{% trans "5" %}</label>
                     <input type="radio" id="rating-4" name="rating" value="4" />
-                        <label for="rating-4">4</label>
+                        <label for="rating-4">{% trans "4" %}</label>
                     <input type="radio" id="rating-3" name="rating" value="3" />
-                        <label for="rating-3">3</label>
+                        <label for="rating-3">{% trans "3" %}</label>
                     <input type="radio" id="rating-2" name="rating" value="2" />
-                        <label for="rating-2">2</label>
+                        <label for="rating-2">{% trans "2" %}</label>
                     <input type="radio" id="rating-1" name="rating" value="1" />
-                        <label for="rating-1">1</label>
+                        <label for="rating-1">{% trans "1" %}</label>
                     <input type="radio" id="rating-0" name="rating" value="0" class="last" />
-                        <label for="rating-0">0</label>
+                        <label for="rating-0">{% trans "0" %}</label>
                 </span>
             </div>
         </span>
     </form>
         {% if node.rating %}
             <span data-tooltip title="Average Rating: {{ratings.avg}}<br>No. of Users rated: {{node.rating|length}}" style="display: inline-block;vertical-align: baseline;">
-                <label class="rating-lbl" style="font-size: 15px;color: #7D7D7D" id="avg-rating" >Avg. : &nbsp;{{ratings.avg|default:"unrated"}} {% trans ' by ' %}{{ node.rating|length }}</label>
+                <label class="rating-lbl" style="font-size: 15px;color: #7D7D7D" id="avg-rating" >{% trans "Avg" %} : &nbsp;{{ratings.avg|default:"unrated"}} {% trans ' by ' %}{{ node.rating|length }}</label>
             </span>
         {% endif %}
 
