--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translation_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/translation_list.html
@@ -14,7 +14,7 @@
         <label>
         {% trans "Translations:" %}
             <div>
-                <button href="#" data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="orange-button" tiny>Add / Edit &nbsp;<i class="fa fa-chevron-down"></i></button><br/>
+                <button href="#" data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="orange-button" tiny>{% trans "Add" %} / {% trans "Edit" %} &nbsp;<i class="fa fa-chevron-down"></i></button><br/>
             
                 <ul id="drop1" data-dropdown-content class="f-dropdown" aria-hidden="true">
             {% for each_lang in supported_languages %}
