--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_node_form.html
@@ -22,7 +22,7 @@
                 <br>
                 {% if not no_altnames %}
                 <div class="left">
-                <h5>Display Name</h5>
+                <h5>{% trans "Display Name" %}</h5>
                 <div class="gray-text"></div>
                 </div>
                 <div class="small-11 medium-11 large-11 columns">
