--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -4203,9 +4203,10 @@ $module-card-lines-to-show: 3;
     margin: 10px;
     border-radius: 5px;
     position: relative;
+    box-shadow: 0px 0px 15px rgb(193, 227, 238);
 
     &:hover {
-        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 0px 15px black;
     }
 
     &>div {
@@ -4265,11 +4266,12 @@ $module-card-lines-to-show: 3;
         border-width: 1px 1px 1px 0px;
         border-radius: 0px 7px 7px 0px;
         border-color: #d5d5d5;
-        box-shadow: inset 6px 0px 13px -5px;
+        // box-shadow: inset 6px 0px 13px -5px;
         -webkit-transition: left .4s ease-in-out;
         transition: left .4s ease-in-out;
         -webkit-transition-property: left; /* Safari */
         transition-property: left;
+        background-color:rgba(221, 221, 221, 0.19);
 
         .card_label {
             font-weight: 600;
