--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -74,7 +74,7 @@
                         </li>
                         <li >
 
-                            <a href="{% url 'unit_detail' group_id %}" {% if title == 'unit_authoring' %}class="selected"{% endif %}>{% trans "Lessons" %}</a>
+                            <a href="{% url 'unit_detail' group_id %}" {% if title == 'unit_authoring' %}class="selected"{% endif %}>{% if not group_object.project_config.tab_name %}{% trans "Lessons" %} {% else %}{{group_object.project_config.tab_name}} {% endif %}</a>
 
 
                         </li>
