--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -40,6 +40,12 @@
               <li>
                   <a href="{% url 'unit_edit' groupid group_object.pk %}" class="fi-pencil"> {% trans "Edit" %}</a>
               </li>
+              {% if_edit_course_structure as edit_course_struct %}
+              {% if edit_course_struct %}
+              <li>
+                  <a href="{% url 'unit_detail' groupid  %}" target="_blank" class="fi-pencil"> {% trans "Edit Course Structure" %}</a>
+              </li>
+              {% endif %}
               <li>
                     <a class="fi-photo" style="position: relative;top: -3px;left: 2px;" data-reveal-id="group_banner_prof_pic_prop">
                     {% trans "Change image" %}</a>
@@ -93,7 +99,8 @@
       {% trans "Overview" %}</a> 
     </li>
     <li>
-      <a href="{% url 'course_content' group_id %}" {% if title == 'course content' %}class="selected"{% endif %}>{% trans "Lessons" %}</a> 
+      <a href="{% url 'course_content' group_id %}" {% if title == 'course content' %}class="selected"{% endif %}>
+      {% if not group_object.project_config.tab_name %}{% trans "Lessons" %}{% else %}{{group_object.project_config.tab_name}} {% endif %}</a> 
      </li>
     <li>  <a href="{% url 'course_raw_material' group_id %}" {% if title == 'raw material' or title == "raw_material_detail"  %}class="selected"{% endif %}>{% trans "Resources" %}</a> </li>
     <li>
