subsection value added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
@@ -127,7 +127,7 @@
                     <h5>Enter Sub Section name</h5>
                     </div>
                     <div class="right course_heading_unit">
-                         <input id="subsection-name" name="subsection_name" type="text" placeholder="Enter Sub Section name"/>
+                         <input id="subsection-name" name="subsection_name" value="{{unit_node.project_config.subsection_name}}" type="text" placeholder="Enter Sub Section name"/>
                     </div>
                 </div>
                 
