resolving scroll issue in activity player

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -3801,7 +3801,9 @@ ul.nav_menu_1 {
 .course_editor_section{
     background:#fff;
     min-height: 100vh;
+    min-width:910px;
     margin-bottom:10px;
+    padding-right:4px;
     #scstyle{
         margin-top:-10px;
     }
