plural name issue

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -154,7 +154,7 @@
           <i class="icon-wid fa fa-list"></i>
         </div>
         <div class="left module_text">
-          <h5>No. of {% firstof group_object.project_config.tab_name 'Lesson' %}(s)</h5>
+          <h5>No. of {% firstof group_object.project_config.tab_name 'Lessons' %}</h5>
           <div class="course-highlight">
              <span>{{group_object.collection_set|length}}</span>
           </div>
