Removed truncate charactes from Unit Card

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/card_group.html
@@ -53,7 +53,7 @@
     {% endif %}
     </div>
     <div class="unit_desc">
-        {{node.content|safe|striptags|truncatechars:30}}
+        {{node.content|safe|striptags}}
     </div>
     {% comment %}
     <div class="unit_breif">
