user_id_list js issue fixed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_enroll.html
@@ -86,6 +86,7 @@
   }
 
   $(document).ready(function(){
+    try{
     user_id_list = {{request.session.buddies_userid_list}}
     group_member_ids = {{group_object.author_set}}
     isSuperset = user_id_list.every(function(val) {
@@ -93,6 +94,9 @@
     });
     if (isSuperset){
       $(".enroll_all_users").addClass("hide")
+    }
+  }
+    catch(ch){
     }
   })
 
