--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms.html
@@ -148,7 +148,15 @@
         {% endif %}
     </div>
   </div>
-
+<div id="delete-unit" class="reveal-modal tiny text-center" data-reveal>
+  <h3>{% trans "Delete Unit:" %} {% firstof group_object.altnames group_object.name  %} ?</h3>
+      <br/>
+      {% trans "Are you sure want to delete this unit?" %}
+      <br/>
+      <a href="#" class="button tiny success">{% trans "Cancel" %}</a>
+      <a href="{% url 'delete_group_url_redirect' group_object.pk 'explore_basecourses' %}" class="button tiny alert">{% trans "Yes" %}</a>
+      <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+</div>
 
 
 {% comment %}
