--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -169,7 +169,7 @@
         <a class="close-reveal-modal">&#215;</a>
     </div>
 
-
+{% include 'ndf/footer_clix.html' %}
 
     <script type="text/javascript">
 
