--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/lms_dashboard.html
@@ -80,6 +80,8 @@
 
     </div>
     <div id="show-overlay" class="reveal-modal reveal-modal-overlay" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+
+    {% include 'ndf/footer_clix.html' %}
     <script type="text/javascript">
         
         function show_my_performance(this_obj){
