--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/footer_clix.html
@@ -23,7 +23,7 @@
             <div class="small-3 medium-2 large-2 columns footer-logo">
               <p>
                 <a href="http://tatatrusts.org/" target="_blank">
-                    <img src="/static/ndf/images/tatatrusts.png" style="height:15px;" class=""/>
+                    <img src="/static/ndf/images/tatatrusts.png" style="height:15px;padding-left:0px;" class=""/>
                 </a>
               </p>
             </div>
