--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/landing_page_clix.html
@@ -15,51 +15,47 @@
 {% block body_content %}
 <div class="land_page">
   <div class='bg-img'>
-    <div class="row">
       <div class="landing_page_background" style="height: 100vh;">
-        <div class="small-12 columns ">
             <div class="row" data-equalizer>
                 <div class="small-6 medium-6 columns clix_brief panel-mod" data-equalizer-watch>
-
-                  <img src="/static/ndf/images/Clix_logo.png" style='width:300px;margin: 40px 0px;' title="Invitation to clix."/>
-                   <p class='white-text'>
-                        
-                    <img class="img-style-land" src="/static/ndf/images/Diamonte_simpleText_32-27-april.png">
-                    </p>
+                  <img src="/static/ndf/images/Clix_logo.png" style='margin: 40px 0px;' title="Invitation to clix."/>
                 </div>
-                <div class="small-5 columns">
+            </div>
+            <div class="small-3 medium-4 large-6 columns">
+                <img class="img-style-land" src="/static/ndf/images/Diamonte_simpleText_32-27-april.png" style="margin-left:50px;">
+            </div>
+                {# <div class="small-5 columns"> #}
                 {# <img src="/static/ndf/images/landing_page/bees.svg" class="bees"/> #}
-                </div>
-                {% if not user.is_authenticated  %}
-                    <div class="small-6 medium-6 columns" data-equalizer-watch>
+                {# </div> #}
+            {% if not user.is_authenticated  %}
+              <div class="small-6 medium-6 columns" data-equalizer-watch>
                        <!-- <div class="invitation_to_clix">
                           <span>Login to&nbsp;</span>
                           <img src="/static/ndf/css/themes/clix/logo.svg" title="Invitation to CLIx ">-->
                           <!-- <form method="post" id="loginSubmit" action="/accounts/login/" data-abide="" novalidate="novalidate"> -->
-                    <a class="small expand" href="{% url 'auth_login' %}">
-                        <div class="small-6 medium-6 text-center columns end login-home-button">
-                          {% trans "Login" %}
-                        </div>
-                    </a>
-                      {% else %}
-                      {% get_explore_url as explore_url %}
-                      <a class="small expand" href="{% url explore_url %}">
-                          <div class="small-6 medium-6 text-center columns end login-home-button">
-                            {% trans "Explore Projects" %}
-                          </div>
-                      </a>
-                      <div class="row">
-                          <div class="medium-12 large-12 small-text-left text-center columns end forgot-password">
-                          </div>
-                      </div>
-                      <input type="hidden" name="next" value="/welcome">
+                <a class="small expand" href="{% url 'auth_login' %}">
+                  <div class="small-8 medium-6 large-6 text-center columns login-home-button">
+                    {% trans "Login" %}
+                  </div>
+                </a>
+              {% else %}
+                {% get_explore_url as explore_url %}
+                  <a class="small expand" href="{% url explore_url %}">
+                    <div class="small-6 medium-6 text-center columns end login-home-button">
+                      {% trans "Explore Projects" %}
                     </div>
-            </div>
-                {% endif %}
+                  </a>
+                  <div class="row">
+                    <div class="medium-12 large-12 small-text-left text-center columns end forgot-password">
+                    </div>
+                  </div>
+                  <input type="hidden" name="next" value="/welcome">
+              </div>
+      </div>
+          {% endif %}
             <!--<div class="medium-1 columns pannel">-->
                   <!--<img src="/static/ndf/images/landing_page/flowers.svg" class="flowers" />-->
             <!--</div> -->
-        </div>
             <!--<div class="row landing-illustrations">
                 <div class="small-12 medium-12 columns">
                   <img src="/static/ndf/images/landing_page/flowers.svg" class="flowers" />
@@ -78,8 +74,6 @@
                 
 
               {% endif %}-->
-      </div>
-    </div>
   </div>
 </div>
 
